src/subtitleterms/deckbuilder/css/all_lang.css
.card {
  font-family: sans-serif;
  font-size: 24px;
  line-height: 1.5;
  text-align: center;
}

hr {
  background-color: #000000;
  height: 2px;
  margin: 0;
}

h1 {
  font-size: 36px;
}

.gloss h2 {
  font-size: 24px;
  text-decoration-line: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 0.5em;
  margin: 0;
}

.gloss p {
  margin: 0;
  margin-top: 0.5em;
}

.recognition.front .hide-rcg-f {
  opacity: 0;
}

.recognition.back .hide-rcg-b {
  opacity: 0;
}

.recollection.front .hide-rcl-f {
  opacity: 0;
}

.recollection.back .hide-rcl-b {
  opacity: 0;
}

